Remove _weixin_share and update layouts

--- a/_includes/_header.html
+++ b/_includes/_header.html
@@ -1,3 +1,42 @@
+<head>
+
+<meta charset="utf-8">
+<meta http-equiv="cleartype" content="on">
+<meta name="MobileOptimized" content="320">
+<meta name="HandheldFriendly" content="True">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+<title>{% if page.title %}{{ page.title }} - {% endif %}{{ site.title }}</title>
+<meta name="description" content="{% if page.description %}{{ page.description }}{% endif %}">
+<meta name="keywords" content="{% if page.tags %}{{ page.tags | join: ', ' }}{% endif %}">
+<link href="{{ site.baseurl }}/feed.xml" type="application/atom+xml" rel="alternate" title="{{ site.title }} Feed">
+
+<!-- Set render engine for 360 browser -->
+<meta name="renderer" content="webkit">
+
+<!-- No Baidu Siteapp-->
+<meta http-equiv="Cache-Control" content="no-siteapp"/>
+
+<!-- For all browsers -->
+<link rel="stylesheet" href="{{ site.baseurl }}/assets/css/main.css">
+<!-- Load Modernizr -->
+<script src="{{ site.baseurl }}/assets/js/vendor/modernizr-2.6.2.custom.min.js"></script>
+<!-- Icons 16x16 -->
+<link rel="shortcut icon" href="{{ site.baseurl }}/assets/images/favicon.ico">
+<!-- Icons 32x32 -->
+<link rel="shortcut icon" href="{{ site.baseurl }}/assets/images/favicon.png">
+<!-- Icons 57x57 (precomposed) for iPhone 3GS, pre-2011 iPod Touch and older Android devices -->
+<link rel="apple-touch-icon-precomposed" href="{{ site.baseurl }}/assets/images/apple-touch-icon-precomposed.png">
+<!-- Icons 72x72 (precomposed) for 1st generation iPad, iPad 2 and iPad mini -->
+<link rel="apple-touch-icon-precomposed" sizes="72x72" href="{{ site.baseurl }}/assets/images/apple-touch-icon-72x72-precomposed.png">
+<!-- Icons 114x114 (precomposed) for iPhone 4, 4S, 5 and post-2011 iPod Touch -->
+<link rel="apple-touch-icon-precomposed" sizes="114x114" href="{{ site.baseurl }}/assets/images/apple-touch-icon-114x114-precomposed.png">
+<!-- Icons 144x144 (precomposed) for iPad 3rd and 4th generation -->
+<link rel="apple-touch-icon-precomposed" sizes="144x144" href="{{ site.baseurl }}/assets/images/apple-touch-icon-144x144-precomposed.png">
+
+</head>
+<body id="top" {% if page.image.feature %}class="feature"{% endif %}>
+
 <!-- browser-upgrade -->
 <!--[if lt IE 9]><div class="upgrade"><strong><a href="http://whatbrowser.org/">Your browser is quite old!</strong> Why not upgrade to a different browser to better enjoy this site?</a></div><![endif]-->
 
