--- a/_includes/_header.html
+++ b/_includes/_header.html
@@ -34,6 +34,17 @@
 <!-- Icons 144x144 (precomposed) for iPad 3rd and 4th generation -->
 <link rel="apple-touch-icon-precomposed" sizes="144x144" href="{{ site.baseurl }}/assets/images/apple-touch-icon-144x144-precomposed.png">
 
+<!-- Baidu Tongji  -->
+<script>
+var _hmt = _hmt || [];
+(function() {
+  var hm = document.createElement("script");
+  hm.src = "//hm.baidu.com/hm.js?184efdd4fc92c265f23e4aa7aae22df1";
+  var s = document.getElementsByTagName("script")[0]; 
+  s.parentNode.insertBefore(hm, s);
+})();
+</script>
+
 </head>
 <body id="top" {% if page.image.feature %}class="feature"{% endif %}>
 
