--- a/_includes/_header.html
+++ b/_includes/_header.html
@@ -15,7 +15,19 @@
 <meta name="renderer" content="webkit">
 
 <!-- No Baidu Siteapp-->
-<meta http-equiv="Cache-Control" content="no-siteapp"/>
+<meta http-equiv="Cache-Control" content="no-siteapp" />
+<!-- Baidu site verification -->
+<meta name="baidu-site-verification" content="dcXVtLtIQN" />
+<!-- Baidu Statistics  -->
+<script>
+  var _hmt = _hmt || [];
+  (function() {
+    var hm = document.createElement("script");
+    hm.src = "//hm.baidu.com/hm.js?184efdd4fc92c265f23e4aa7aae22df1";
+    var s = document.getElementsByTagName("script")[0];
+    s.parentNode.insertBefore(hm, s);
+  })();
+</script>
 
 <!-- For all browsers -->
 <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/main.css">
@@ -33,17 +45,6 @@
 <link rel="apple-touch-icon-precomposed" sizes="114x114" href="{{ site.baseurl }}/assets/images/apple-touch-icon-114x114-precomposed.png">
 <!-- Icons 144x144 (precomposed) for iPad 3rd and 4th generation -->
 <link rel="apple-touch-icon-precomposed" sizes="144x144" href="{{ site.baseurl }}/assets/images/apple-touch-icon-144x144-precomposed.png">
-
-<!-- Baidu Tongji  -->
-<script>
-var _hmt = _hmt || [];
-(function() {
-  var hm = document.createElement("script");
-  hm.src = "//hm.baidu.com/hm.js?184efdd4fc92c265f23e4aa7aae22df1";
-  var s = document.getElementsByTagName("script")[0]; 
-  s.parentNode.insertBefore(hm, s);
-})();
-</script>
 
 </head>
 <body id="top" {% if page.image.feature %}class="feature"{% endif %}>
