--- a/_includes/_header.html
+++ b/_includes/_header.html
@@ -70,9 +70,9 @@
       <a href="#"><i class="fa fa-fw fa-bars"></i> 关于</a>
       <ul class="dl-submenu">
         <li>
-          <img src="{{ site.baseurl }}/assets/images/{{ site.owner.avatar }}" alt="{{ site.owner.name }} photo" class="author-photo">
-          <h4>{{ site.owner.name }}</h4>
-          <p>{{ site.owner.bio }}</p>
+          <img src="{{ site.baseurl }}/assets/images/avatar.jpg" alt="{{ site.owner }} photo" class="author-photo">
+          <h4>{{ site.owner }}</h4>
+          <p>Valar Morghulis</p>
           <a href="http://github.com/aidistan" target="_blank"><i class="fa fa-github"></i> GitHub</a>
           <a href="http://photo.aidistan.net" target="_blank"><i class="fa fa-photo"></i> Lofter</a>
         </li>
