--- a/_includes/_footer.html
+++ b/_includes/_footer.html
@@ -1,6 +1,6 @@
 <div class="footer-wrapper">
   <footer role="contentinfo">
-    <div>Copyright &copy; {{ site.time | date: '%Y' }} {{ site.owner.name }}, All Rights Reserved.</div>
+    <div>Copyright &copy; {{ site.time | date: '%Y' }} {{ site.owner }}, All Rights Reserved.</div>
     <div>Proudly published by <a href="http://jekyllrb.com">Jekyll</a>, using a customized <a href="http://mademistakes.com/hpstr/">HPSTR Theme</a>.</div>
   </footer>
 </div>
