--- a/_includes/_footer.html
+++ b/_includes/_footer.html
@@ -2,7 +2,7 @@
   <footer role="contentinfo">
     <div>Copyright &copy; {{ site.time | date: '%Y' }} {{ site.owner }}, All Rights Reserved.</div>
     <div>Proudly published by <a href="http://jekyllrb.com">Jekyll</a>, using a customized <a href="http://mademistakes.com/hpstr/">HPSTR Theme</a>.</div>
-    <div>
+    <div style="display: none;">
       <img src="http://upfiles.b0.upaiyun.com/logo/180x90.png" style="height: 45px;" />
     </div>
   </footer>
