--- a/_includes/_footer.html
+++ b/_includes/_footer.html
@@ -1,7 +1,7 @@
 <div class="footer-wrapper">
   <footer role="contentinfo">
-    <div>Copyright &copy; {{ site.time | date: '%Y' }} {{ site.owner }}, All Rights Reserved.</div>
-    <div>Proudly published by <a href="http://jekyllrb.com">Jekyll</a>, using a customized <a href="http://mademistakes.com/hpstr/">HPSTR Theme</a>.</div>
+    <div>Copyright &copy; {{ site.time | date: '%Y' }} <a href="mailto:{{ site.email }}">{{ site.owner }}</a>, All Rights Reserved.</div>
+    <div>Proudly published by <a href="http://jekyllrb.com" target="_blank">Jekyll</a>, using a customized <a href="http://mademistakes.com/hpstr/" target="_blank">HPSTR Theme</a>.</div>
     <div style="display: none;">
       <img src="http://upfiles.b0.upaiyun.com/logo/180x90.png" style="height: 45px;" />
     </div>
