--- a/_sass/_adome.scss
+++ b/_sass/_adome.scss
@@ -53,8 +53,13 @@ body {
 .footer-wrapper {
   margin: 10px auto;
 
+  a {
+    border-bottom: 1px dotted lighten($text-color,20);
+  }
+
   a:hover {
     color: $text-color;
+    border-bottom: 1px dotted $text-color;
   }
 }
 
