--- a/_includes/breadcrumbs.html
+++ b/_includes/breadcrumbs.html
@@ -1,1 +1,7 @@
+<!--
+  BreadCrumbs (面包屑)
+
+  Usage:
+    [% include breadcrumbs.html %]
+-->
 {% capture breadcrumb_url %}{{ site.baseurl }}/{% endcapture %}{% assign breadcrumbs = page.url | split:"/" %}/ {% for _breadcrumb in breadcrumbs offset:1 %}{% capture breadcrumb %}{% if forloop.last %}{{ _breadcrumb | replace_first:".html" }}{% else %}{{ _breadcrumb }}{% endif %}{% endcapture %}{% capture breadcrumb_url %}{{ breadcrumb_url }}{{ breadcrumb }}/{% endcapture %}<a href="{{ breadcrumb_url }}"> {{ breadcrumb }}</a> /{% endfor %}
