--- a/_sass/_adome.scss
+++ b/_sass/_adome.scss
@@ -124,6 +124,11 @@ body {
     margin-right: auto;
   }
 
+  article {
+    padding-top: 10px;
+    padding-bottom: 10px;
+  }
+
   table {
     border-collapse: collapse;
     border-spacing: 0;
