--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,11 +1,11 @@
 <!doctype html>
 <html class="no-js">
-
+<head>
   {% include _header.html %}
-
+</head>
+<body>
+  {% include _banner.html %}
   {{ content }}
-
   {% include _footer.html %}
-
 </body>
 </html>
