Refactor tags page

--- a/_includes/_footer.html
+++ b/_includes/_footer.html
@@ -13,6 +13,14 @@
 <script src="http://libs.useso.com/js/jquery/1.11.1/jquery.min.js"></script>
 <![endif]-->
 
+<!-- Amaze UI -->
+<script src="http://cdn.amazeui.org/amazeui/2.3.0/js/amazeui.min.js"></script>
+<script src="http://cdn.amazeui.org/amazeui/2.3.0/js/amazeui.legacy.min.js"></script>
+<script src="http://cdn.amazeui.org/amazeui/2.3.0/js/amazeui.widgets.helper.min.js"></script>
+
+<!-- Waypoints -->
+<script src="{{ site.baseurl }}/assets/js/vendor/jquery.waypoints.min.js"></script>
+
 <!-- Main JS -->
 <script src="{{ site.baseurl }}/assets/js/main.js"></script>
 
