--- a/_includes/_banner.html
+++ b/_includes/_banner.html
@@ -1,4 +1,4 @@
-<div class="banner am-container">
+<div id="banner" class="am-container">
   <!-- browser-upgrade -->
   <!--[if lt IE 9]>
   <div class="am-alert am-alert-danger" data-am-alert>
@@ -18,4 +18,8 @@
       <li><a href="{{ site.baseurl }}/about/">关于</a></li>
     </ul>
   </nav>
+
+  <div id="gotop">
+    <a href="#banner" title="回到顶部" class="am-icon-btn am-icon-arrow-up am-active" data-am-smooth-scroll></a>
+  </div>
 </div>
