--- a/_sass/_fixam.scss
+++ b/_sass/_fixam.scss
@@ -21,3 +21,7 @@ h3 { font-size: 1.50em; margin-top: 0.50em; }
     h3 { font-size: 1.00em; margin-top: 0.00em; }
   }
 }
+
+.am-panel {
+  h1, h2, h3, h4, h5, h6 { margin: 0 !important; }
+}
