Complete about page

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1,6 +1,7 @@
 ---
 ---
 
+@import "variables";
 @import "fixam";
 @import "elements";
-@import "syntax";
+@import "syntax";    // For syntax highlight 
