--- a/_sass/_elements.scss
+++ b/_sass/_elements.scss
@@ -1,6 +1,6 @@
 #banner {
   text-align: center;
-  margin-bottom: 30px;
+  margin: 30px auto;
 
   nav {
     width:100%;
@@ -37,5 +37,16 @@
 
   a {
     box-shadow: 0px 0px 3px #888888, 3px 3px 1px #888888;
+  }
+}
+
+#about-me {
+  span {
+    font-size: $about-tile-size;
+    line-height: $about-tile-size;
+  }
+  img {
+    width: $about-tile-size;
+    height: $about-tile-size;
   }
 }
