--- a/_sass/_fixam.scss
+++ b/_sass/_fixam.scss
@@ -1,27 +1,29 @@
 .am-container { max-width: 640px; }
 
-h1 { font-size: 2.50em; margin-top: 1.00em; }
-h2 { font-size: 2.00em; margin-top: 1.00em; }
-h3 { font-size: 1.50em; margin-top: 0.50em; }
+h1 { font-size: 2.50em; }
+h2 { font-size: 2.00em; }
+h3 { font-size: 1.50em; }
 
 #content {
-  h1 { font-size: 2.00em; margin-top: 1.00em; }
-  h2 { font-size: 1.50em; margin-top: 0.50em; }
-  h3 { font-size: 1.25em; margin-top: 0.25em; }
+  h1 { font-size: 2.00em; }
+  h2 { font-size: 1.50em; }
+  h3 { font-size: 1.25em; }
+  > h1 { margin-top: 1.00em; }
+  > h2 { margin-top: 0.50em; }
+  > h3 { margin-top: 0.25em; }
 }
 
 @media screen and (max-width: 450px) {
-  h1 { font-size: 2.00em; margin-top: 1.00em; }
-  h2 { font-size: 1.50em; margin-top: 0.50em; }
-  h3 { font-size: 1.25em; margin-top: 0.25em; }
+  h1 { font-size: 2.00em; }
+  h2 { font-size: 1.50em; }
+  h3 { font-size: 1.25em; }
 
   #content {
-    h1 { font-size: 1.50em; margin-top: 0.50em; }
-    h2 { font-size: 1.25em; margin-top: 0.25em; }
-    h3 { font-size: 1.00em; margin-top: 0.00em; }
+    h1 { font-size: 1.50em; }
+    h2 { font-size: 1.25em; }
+    h3 { font-size: 1.00em; }
+    > h1 { margin-top: 0.50em; }
+    > h2 { margin-top: 0.25em; }
+    > h3 { margin-top: 0.00em; }
   }
-}
-
-.am-panel {
-  h1, h2, h3, h4, h5, h6 { margin: 0 !important; }
 }
