--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,48 +2,41 @@
 layout: default
 ---
 
-<div id="post" role="main">
-  <article class="hentry">
-    <header class="header-title">
-      <div class="header-title-wrap">
-        <h1><a href="{{ site.baseurl }}{{ page.url }}" rel="bookmark" title="{{ page.title }}">{{ page.title }}</a>{% if page.link %} <sup><a class="fa fa-external-link" href="{{ page.link }}" target="_blank"></a></sup>{% endif %}</h1>
-      </div><!-- /.header-title-wrap -->
-    </header>
+<div id="content" class="post am-container" role="main">
+  <article class="am-article">
+    <div class="am-article-hd" style="display: none;">
+      <h1 class="am-article-title" style="display: none;">{{ page.title }}</h1>
+    </div>
 
-    <div class="entry-content">
-      {% if page.description %}<div class="entry-desc">{{ page.description }}</div>{% endif %}
-
+    <div class="am-article-bd">
+      <p class="am-article-lead" style="display: none;">{{ page.description }}</p>
       {{ content }}
+    </div>
 
-      <footer class="entry-meta">
-        <span class="entry-tags">{% for tag in page.tags %}<a href="{{ site.baseurl }}/tags/#{{ tag }}" title="Pages tagged {{ tag }}" class="tag">{{ tag }}</a>{% unless forloop.last %}{% endunless %}{% endfor %}</span>
-        <span>发表日期: <span class="entry-date date published updated"><time datetime="{{ page.date | date_to_xmlschema }}">{{ page.date | date: "%Y/%m/%d" }}</time></span> | 最新修订: <span class="entry-date date modified"><time datetime="{{ page.modified }}">{{ page.modified | date: "%Y/%m/%d" }}</time></span></span>
+    <div class="am-article-meta">
+      <span>
+        发表日期:
+        <time datetime="{{ page.date | date_to_xmlschema }}">{{ page.date | date: "%Y年%m月%d日" }}</time>
+        | 最新修订:
+        <time datetime="{{ page.modified | date_to_xmlschema  }}">{{ page.modified | date: "%Y年%m月%d日" }}</time>
+      </span>
+      <span class="am-fr">{% for tag in page.tags %}<a href="{{ site.baseurl }}/tags/#{{ tag }}" title="Pages tagged {{ tag }}" class="am-badge am-round">{{ tag }}</a> {% endfor %}</span>
+    </div>
 
-        <!-- Using JiaThis here -->
-        <div class="social-share">
-          <style type="text/css">ul.socialcount li{cursor:pointer;}</style>
-          <ul class="socialcount socialcount-small inline-list">
-            <li><a class="jiathis_button_weixin"><i class="fa fa-weixin fa-lg"></i></a></li>
-            <li><a class="jiathis_button_qzone"><i class="fa fa-qq fa-lg"></i></a></li>
-            <li><a class="jiathis_button_tsina"><i class="fa fa-weibo fa-lg"></i></a></li>
-            <li><a class="jiathis_button_renren"><i class="fa fa-renren fa-lg"></i></a></li>
-            <li><a class="jiathis_button_email"><i class="fa fa-envelope fa-lg"></i></a></li>
-          </ul>
-          <script type="text/javascript" >
-            var jiathis_config={
-              title:"{{ page.title }}",
-              summary:"{{ page.description }}"
-            }
-          </script>
-          <script type="text/javascript" src="http://v3.jiathis.com/code/jia.js" charset="utf-8"></script>
-        </div><!-- /.social-share -->
-      </footer>
+    <!-- 多说分享与评论 -->
+    {% if site.duoshuo and page.comments %}
 
-      {% if site.duoshuo and page.comments %}
-      <!-- 多说评论框 start -->
-      <div class="ds-thread" data-thread-key="{{ page.comments }} " data-title="{{ page.title }}" data-url="{{ site.duoshuo_url }}{{ page.url }}"></div>
-      <!-- 多说评论框 end -->
-      {% endif %}
-    </div><!-- /.entry-content -->
+    <div class="ds-share flat" data-thread-key="{{ page.comments }}" data-title="{{ page.title }}" data-images="{{ page.image.feature }}" data-content="{{ page.description }}" data-url="{{ site.duoshuo_url }}{{ page.url }}">
+      <div class="ds-share-inline">
+        <div class="ds-share-icons am-link-muted">
+          <a class="ds-wechat am-icon-wechat am-icon-md" href="javascript:void(0);" data-service="wechat"></a>
+          <a class="ds-qqt am-icon-qq am-icon-md" href="javascript:void(0);" data-service="qqt"></a>
+          <a class="ds-weibo am-icon-weibo am-icon-md" href="javascript:void(0);" data-service="weibo"></a>
+        </div>
+      </div>
+    </div>
+
+    <div class="ds-thread" data-thread-key="{{ page.comments }}" data-title="{{ page.title }}" data-url="{{ site.duoshuo_url }}{{ page.url }}"></div>
+    {% endif %}
   </article>
-</div><!-- /#main -->
+</div>
