--- a/_sass/_elements.scss
+++ b/_sass/_elements.scss
@@ -40,13 +40,37 @@
   }
 }
 
-#about-me {
-  span {
-    font-size: $about-tile-size;
-    line-height: $about-tile-size;
+#content.page {
+  #about-me {
+    span {
+      font-size: $about-tile-size;
+      line-height: $about-tile-size;
+    }
+    img {
+      width: $about-tile-size;
+      height: $about-tile-size;
+    }
   }
-  img {
-    width: $about-tile-size;
-    height: $about-tile-size;
+}
+
+#content.post {
+  .am-article-bd > p { text-indent: 2em; }
+  .ds-share-icons {
+    border-bottom: 1px solid #E5E5E5 !important;
+    border-left: 0 !important;
+    border-right: 0 !important;
+    border-top: 1px solid #E5E5E5 !important;
+    margin: 20px 0;
+    text-align: center;
+
+    > a {
+      padding: 20px 30px;
+      margin-bottom: 3px;
+
+      &:hover {
+        margin-bottom: 0;
+        border-bottom: 3px solid #0F9AE0;
+      }
+    }
   }
 }
