--- a/_includes/_banner.html
+++ b/_includes/_banner.html
@@ -1,11 +1,11 @@
-<div id="banner" class="am-container">
-  <!-- browser-upgrade -->
-  <!--[if lt IE 9]>
-  <div class="am-alert am-alert-danger" data-am-alert>
-    <strong><a href="http://whatbrowser.org/">Your browser is quite old!</strong> Why not upgrade to a different browser to better enjoy this site?</a>
-  </div>
-  <![endif]-->
+<!-- browser-upgrade -->
+<!--[if lt IE 9]>
+<div class="am-alert am-alert-danger" data-am-alert>
+  <strong><a href="http://whatbrowser.org/">Your browser is quite old!</strong> Why not upgrade to a different browser to better enjoy this site?</a>
+</div>
+<![endif]-->
 
+<div id="banner" class="am-container">
   <h1>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</h1>
   {% if page.layout == 'note' %}{% include _breadcrumbs.html %}{% else %}
   <p>{{ page.description }}</p>
@@ -21,6 +21,13 @@
     </ul>
   </nav>
 </div>
+
+{% if page.image.feature %}
+<div id="feature" style="background-image:url({{ site.baseurl }}/assets/images/{{ page.image.feature }});">
+  <img src="{{ site.baseurl }}/assets/images/{{ page.image.feature }}" title="feautre" style="display: none;">
+  {% if page.image.credit %}{% if page.image.creditlink %}<a href="{{ page.image.creditlink }}" target="_blank">{% endif %}<span class="credit am-text-sm">{{ page.image.credit }}</span>{% if page.image.creditlink %}</a>{% endif %}{% endif %}
+</div>
+{% endif %}
 
 <div id="gotop">
   <a href="#banner" title="回到顶部" class="am-icon-btn am-icon-arrow-up am-active" data-am-smooth-scroll></a>
