--- a/_sass/_elements.scss
+++ b/_sass/_elements.scss
@@ -1,11 +1,11 @@
 #banner {
-  text-align: center;
   margin: 30px auto;
+  position: relative;
+  text-align: center;
 
   nav {
     width:100%;
     padding:0;
-    background:#fff;
     border-top: 1px solid #E5E5E5;
     border-bottom: 1px solid #E5E5E5;
     margin: 20px 0;
@@ -29,6 +29,31 @@
     }
   }
 }
+
+#feature {
+  overflow: hidden;
+  position: relative;
+  background-position: center;
+  background-repeat: no-repeat;
+  width: 100%;
+  height: 300px;
+  margin: 30px 0;
+
+  .credit {
+    position: absolute;
+    bottom: 10px;
+    right: 10px;
+    padding: 2px 5px;
+    border-radius: 5px;
+    color: #efefef;
+    background-color: rgba(0,0,0,0.618);
+
+    &:before {
+      content: '封图：'
+    }
+  }
+}
+
 
 #gotop {
   display: none;
