Fix the external link in banner
Complete the design of the new template

--- a/_includes/_banner.html
+++ b/_includes/_banner.html
@@ -6,7 +6,10 @@
 <![endif]-->
 
 <div id="banner" class="am-container">
-  <h1>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</h1>
+  <h1>
+    {% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}
+    {% if page.link %}<sup><a class="am-icon-external-link" href="{{ page.link }}" target="_blank"></a></sup>{% endif %}
+  </h1>
   {% if page.layout == 'note' %}{% include _breadcrumbs.html %}{% else %}
   <p>{{ page.description }}</p>
   {% endif %}
