--- a/_includes/_banner.html
+++ b/_includes/_banner.html
@@ -26,9 +26,9 @@
 </div>
 
 {% if page.image.feature %}
-<div id="feature" style="background-image:url({{ site.baseurl }}/assets/images/{{ page.image.feature }});">
+<div id="feature" style="display: none;">
   <img src="{{ site.baseurl }}/assets/images/{{ page.image.feature }}" title="feautre" style="display: none;">
-  {% if page.image.credit %}{% if page.image.creditlink %}<a href="{{ page.image.creditlink }}" target="_blank">{% endif %}<span class="credit am-text-sm">{{ page.image.credit }}</span>{% if page.image.creditlink %}</a>{% endif %}{% endif %}
+  {% if page.image.credit %}{% if page.image.creditlink %}<a href="{{ page.image.creditlink }}" target="_blank">{% endif %}<span class="credit am-text-sm" style="display: none;">{{ page.image.credit }}</span>{% if page.image.creditlink %}</a>{% endif %}{% endif %}
 </div>
 {% endif %}
 
