--- a/_sass/_elements.scss
+++ b/_sass/_elements.scss
@@ -36,7 +36,7 @@
   background-position: center;
   background-repeat: no-repeat;
   width: 100%;
-  height: 300px;
+  height: 0;
   margin: 30px 0;
 
   .credit {
