--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1,7 +1,7 @@
 ---
 ---
 
-@import "variables";
-@import "fixam";
-@import "elements";
-@import "syntax";    // For syntax highlight 
+@import "variables"; // scss variables
+@import "base";      // basic styles
+@import "elements";  // element styles
+@import "syntax";    // syntax highlight
