--- a/_sass/_elements.scss
+++ b/_sass/_elements.scss
@@ -4,11 +4,11 @@
   text-align: center;
 
   nav {
-    width:100%;
-    padding:0;
     border-top: 1px solid #E5E5E5;
     border-bottom: 1px solid #E5E5E5;
-    margin: 20px 0;
+    margin: 0;
+    padding: 0;
+    width:100%;
 
     ul { margin: 0; padding: 0; }
     li { display: inline-block; list-style: none; }
@@ -33,6 +33,7 @@
 #feature {
   overflow: hidden;
   position: relative;
+  box-shadow: 0px 0px 3px #888888 inset, 0px 3px 1px #888888 inset;
   background-position: center;
   background-repeat: no-repeat;
   width: 100%;
