--- a/_includes/_banner.html
+++ b/_includes/_banner.html
@@ -26,14 +26,23 @@
 </div>
 
 {% if page.image.feature %}
+<div class="feature-trigger am-text-center">
+  <span class="feature-opener am-icon-chevron-up"></span>
+  <span class="feature-closer am-icon-chevron-down"></span>
+</div>
 <div id="feature">
-  <img src="{{ site.baseurl }}/assets/images/{{ page.image.feature }}" title="feautre" style="display: none;">
+  <img src="{{ site.baseurl }}/assets/images/{{ page.image.feature }}" title="封面图片" style="display: none;">
   {% if page.image.credit %}
+  <span class="am-text-sm">
     {% if page.image.creditlink %}<a href="{{ page.image.creditlink }}" target="_blank">{% endif %}
-      <span class="credit am-text-sm">{{ page.image.credit }}</span>
+    {{ page.image.credit }}
     {% if page.image.creditlink %}</a>{% endif %}
+  </span>
   {% endif %}
-  <div class="close am-text-center"><span class="am-icon-chevron-up"></span></div>
+</div>
+<div class="feature-trigger am-text-center">
+  <span class="feature-opener am-icon-chevron-down"></span>
+  <span class="feature-closer am-icon-chevron-up"></span>
 </div>
 {% endif %}
 
