--- a/_sass/_elements.scss
+++ b/_sass/_elements.scss
@@ -1,5 +1,5 @@
 #banner {
-  margin: 30px auto;
+  padding: 30px 0;
   position: relative;
   text-align: center;
 
@@ -30,6 +30,8 @@
   }
 }
 
+.feature-trigger span { cursor: pointer; }
+
 #feature {
   overflow: hidden;
   position: relative;
@@ -38,43 +40,29 @@
   background-repeat: no-repeat;
   width: 100%;
   height: 0;
-  margin: 30px 0;
 
-  .credit {
+  span {
     position: absolute;
     bottom: 10px;
     right: 10px;
     padding: 2px 5px;
     border-radius: 5px;
-    color: #efefef;
     background-color: rgba(0,0,0,0.618);
 
-    &:before {
-      content: '封图：'
-    }
-  }
+    &:before { content: '封图：' }
 
-  .close {
-    position: absolute;
-    bottom: 10px;
-    width: 100%;
-
-    span {
-      color: #efefef;
-      cursor: pointer;
-    }
+    & { color: #efefef; }
+    a { color: #efefef; }
+    a:hover { text-decoration:underline; }
   }
 }
-
 
 #gotop {
   display: none;
   position: fixed;
   z-index: 9;
 
-  a {
-    box-shadow: 0px 0px 3px #888888, 3px 3px 1px #888888;
-  }
+  a {box-shadow: 0px 0px 3px #888888, 3px 3px 1px #888888; }
 }
 
 #content.page {
