Add a meta tag for Bing website verification

--- a/_includes/_header.html
+++ b/_includes/_header.html
@@ -16,6 +16,8 @@
 <meta http-equiv="Cache-Control" content="no-siteapp"/>
 <!-- Baidu site verification -->
 <meta name="baidu-site-verification" content="dcXVtLtIQN" />
+<!-- Bing site verification -->
+<meta name="msvalidate.01" content="E7BF1E5486657C4EBA604D298447936F" />
 
 <!-- Icons 16x16 -->
 <link rel="shortcut icon" href="{{ site.baseurl }}/assets/images/favicon.ico">
