--- a/_sass/_elements.scss
+++ b/_sass/_elements.scss
@@ -67,13 +67,17 @@
 
 #content.page {
   #about-me {
-    span {
+    $about-tile-size: 20px;
+    i {
       font-size: $about-tile-size;
       line-height: $about-tile-size;
+      width: 30px;
+      text-align: center;
     }
     img {
       width: $about-tile-size;
       height: $about-tile-size;
+      margin: 0px 5px;
     }
   }
 }
