--- a/_templates/note.md.erb
+++ b/_templates/note.md.erb
@@ -1,7 +1,7 @@
 ---
 layout:    note
-permalink: /notes/
-title:
+permalink: /notes/<%= path %>/
+title:     <%= title %>
 date:      <%= Time.now.strftime('%Y-%m-%d %H:%M:%S %z') %>
 modified:  <%= Time.now.strftime('%Y-%m-%d %H:%M:%S %z') %>
 ---
