Update the style of ul

--- a/_layouts/note.html
+++ b/_layouts/note.html
@@ -2,6 +2,10 @@
 layout: default
 ---
 
+<style>
+  ul { margin: 0 !important; }
+</style>
+
 <div id="content" class="note am-container" role="main">
 
   {{ content }}
