--- a/_includes/_banner.html
+++ b/_includes/_banner.html
@@ -19,7 +19,7 @@
       <li><a href="{{ site.baseurl }}/" style="padding: 5px 10px;"><img src="{{ site.baseurl }}/assets/images/favicon.png" width=32 height=32></a></li>
       <li><a href="{{ site.baseurl }}/tags/">标签</a></li>
       <li><a href="{{ site.baseurl }}/posts/">时光</a></li>
-      <li><a href="{{ site.baseurl }}/notes/">笔记</a></li>
+      <li><a href="{{ site.baseurl }}/gallery/">长廊</a></li>
       <li><a href="{{ site.baseurl }}/about/">关于</a></li>
     </ul>
   </nav>
