--- a/_sass/_elements.scss
+++ b/_sass/_elements.scss
@@ -35,7 +35,7 @@
 #feature {
   overflow: hidden;
   position: relative;
-  box-shadow: 0px 0px 5px #888888 inset, 0px 4px 1px #888888 inset;
+  box-shadow: 0px 0px 5px #888888 inset, 0px 3px 3px #888888 inset;
   background-position: center;
   background-repeat: no-repeat;
   width: 100%;
@@ -62,7 +62,12 @@
   position: fixed;
   z-index: 9;
 
-  a {box-shadow: 0px 0px 5px #888888, 3px 4px 1px #888888; }
+  a {
+    box-shadow: 0px 0px 5px #888888, -3px 4px 1px #888888;
+    transform: rotate(270deg);
+    -webkit-transform: rotate(270deg);
+    -ms-transform: rotate(270deg);
+  }
 }
 
 #content.page {
