Change back the gotop button

--- a/_includes/_banner.html
+++ b/_includes/_banner.html
@@ -47,5 +47,5 @@
 {% endif %}
 
 <div id="gotop">
-  <a href="#banner" title="回到顶部" class="am-icon-btn am-icon-space-shuttle am-active" data-am-smooth-scroll></a>
+  <a href="#banner" title="回到顶部" class="am-icon-btn am-icon-arrow-up am-active" data-am-smooth-scroll></a>
 </div>
