--- a/_sass/_elements.scss
+++ b/_sass/_elements.scss
@@ -62,12 +62,7 @@
   position: fixed;
   z-index: 9;
 
-  a {
-    box-shadow: 0px 0px 5px #888888, -3px 4px 1px #888888;
-    transform: rotate(270deg);
-    -webkit-transform: rotate(270deg);
-    -ms-transform: rotate(270deg);
-  }
+  a { box-shadow: 0px 0px 5px #888888, 3px 4px 1px #888888; }
 }
 
 #content.page {
