Update about page

--- a/_includes/_banner.html
+++ b/_includes/_banner.html
@@ -20,7 +20,7 @@
       <li><a href="{{ site.baseurl }}/tags/">标签</a></li>
       <li><a href="{{ site.baseurl }}/posts/">时光</a></li>
       <li><a href="{{ site.baseurl }}/gallery/">长廊</a></li>
-      <li><a href="{{ site.baseurl }}/about/">关于</a></li>
+      <li><a href="{{ site.baseurl }}/about/">留言</a></li>
     </ul>
   </nav>
 </div>
