--- a/_includes/_footer.html
+++ b/_includes/_footer.html
@@ -1,6 +1,6 @@
 <footer class="am-footer am-footer-default">
   <div class="am-footer-miscs ">
-    <div>Copyright &copy; {{ site.time | date: '%Y' }} <a href="about" target="_blank">{{ site.owner }}</a>, All Rights Reserved.</div>
+    <div>Copyright &copy; {{ site.time | date: '%Y' }} <a href="/about" target="_blank">{{ site.owner }}</a>, All Rights Reserved.</div>
     <div>Proudly built on <a href="http://amazeui.org" target="_blank">Amaze UI</a>, published by <a href="http://jekyllrb.com" target="_blank">Jekyll</a>, and hosted on <a href="https://github.com" target="_blank">Github</a>.</div>
   </div>
 </footer>
