--- a/_includes/_footer.html
+++ b/_includes/_footer.html
@@ -18,10 +18,10 @@
 <script src="http://cdn.amazeui.org/amazeui/2.4.2/js/amazeui.widgets.helper.min.js"></script>
 
 <!-- Waypoints -->
-<script src="{{ site.baseurl }}/assets/js/vendor/jquery.waypoints.min.js"></script>
+<script src="{{ site.baseurl }}/assets/javascripts/vendor/jquery.waypoints.min.js"></script>
 
 <!-- Main JS -->
-<script src="{{ site.baseurl }}/assets/js/main.js"></script>
+<script src="{{ site.baseurl }}/assets/javascripts/main.js"></script>
 
 <!-- 多说公共JS代码 -->
 {% if site.duoshuo %}
