--- a/_includes/_header.html
+++ b/_includes/_header.html
@@ -49,7 +49,7 @@
 <link rel="stylesheet" href="http://cdn.amazeui.org/amazeui/2.4.2/css/amazeui.min.css">
 
 <!-- Main CSS -->
-<link rel="stylesheet" href="{{ site.baseurl }}/assets/css/main.css">
+<link rel="stylesheet" href="{{ site.baseurl }}/assets/stylesheets/main.css">
 
 <!-- Load modernizr -->
 <script src="http://libs.useso.com/js/modernizr/2.6.2/modernizr.min.js"></script>
