--- a/_includes/_header.html
+++ b/_includes/_header.html
@@ -51,9 +51,6 @@
 <!-- Main CSS -->
 <link rel="stylesheet" href="{{ site.baseurl }}/assets/stylesheets/main.css">
 
-<!-- Load modernizr -->
-<script src="http://libs.useso.com/js/modernizr/2.6.2/modernizr.min.js"></script>
-
 <!-- Baidu Statistics  -->
 <script>
   var _hmt = _hmt || [];
@@ -64,3 +61,6 @@
     s.parentNode.insertBefore(hm, s);
   })();
 </script>
+
+<!-- Youziku -->
+<script type="text/javascript" src="http://api.youziku.com/webfont/FastJS/yzk_12C4AB2F87FC9AB1"></script>
