--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -1,3 +1,6 @@
+::-moz-selection { background: #D6EDFF; }
+     ::selection { background: #D6EDFF; }
+
 .am-container { max-width: 640px; }
 
 h1 { font-size: 2.50em; }
