Improve gotop button

--- a/_includes/_banner.html
+++ b/_includes/_banner.html
@@ -46,6 +46,8 @@
 </div>
 {% endif %}
 
-<div id="gotop">
-  <a href="#banner" title="回到顶部" class="am-icon-btn am-icon-arrow-up am-active" data-am-smooth-scroll></a>
+<div id="gotop-fixer">
+  <div id="gotop-container" class="am-container">
+    <a id="gotop" class="am-icon-btn am-icon-arrow-up am-margin-lg" href="#banner" title="回到顶部" data-am-smooth-scroll style="display: none;"></a>
+  </div>
 </div>
