--- a/_sass/_elements.scss
+++ b/_sass/_elements.scss
@@ -57,12 +57,24 @@
   }
 }
 
-#gotop {
-  display: none;
+#gotop-fixer {
   position: fixed;
   z-index: 9;
+  bottom: 0;
 
-  a { box-shadow: 0px 0px 3px #888888, 2px 3px 1px #888888; }
+  width: 100%;
+}
+
+#gotop-container {
+  position: relative;
+}
+
+#gotop {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+
+  box-shadow: 0 0 3px #888, 2px 3px 1px #888;
 }
 
 #content.post {
