--- a/_includes/_banner.html
+++ b/_includes/_banner.html
@@ -1,17 +1,14 @@
-<!-- browser-upgrade -->
-<!--[if lt IE 9]>
-<div class="am-alert am-alert-danger" data-am-alert>
-  <strong><a href="http://whatbrowser.org/">Your browser is quite old!</strong> Why not upgrade to a different browser to better enjoy this site?</a>
-</div>
-<![endif]-->
-
 <div id="banner" class="am-container">
   <h1>
     {% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}
-    {% if page.link %}<sup><a class="am-icon-external-link" href="{{ page.link }}" target="_blank"></a></sup>{% endif %}
+    {% if page.link %}
+      <sup><a class="am-icon-external-link" href="{{ page.link }}" target="_blank"></a></sup>
+    {% endif %}
   </h1>
-  {% if page.layout == 'note' or page.layout == 'note-index' %}{% include _breadcrumbs.html %}{% else %}
-  <p>{{ page.description }}</p>
+  {% if page.layout == 'note' or page.layout == 'note-index' %}
+    {% include _breadcrumbs.html %}
+  {% else %}
+    <p>{{ page.description }}</p>
   {% endif %}
 
   <nav role="navigation">
@@ -25,24 +22,26 @@
 </div>
 
 {% if page.image.feature %}
-<div class="feature-trigger am-text-center">
-  <span class="feature-opener am-icon-chevron-up"></span>
-  <span class="feature-closer am-icon-chevron-down"></span>
-</div>
-<div id="feature">
-  <img src="{{ site.baseurl }}/assets/images/{{ page.image.feature }}" title="封面图片" style="display: none;">
-  {% if page.image.credit %}
-  <span class="am-text-sm">
-    {% if page.image.creditlink %}<a href="{{ page.image.creditlink }}" target="_blank">{% endif %}
-    {{ page.image.credit }}
-    {% if page.image.creditlink %}</a>{% endif %}
-  </span>
-  {% endif %}
-</div>
-<div class="feature-trigger am-text-center">
-  <span class="feature-opener am-icon-chevron-down"></span>
-  <span class="feature-closer am-icon-chevron-up"></span>
-</div>
+  <div class="feature-trigger am-text-center">
+    <span class="feature-opener am-icon-chevron-up"></span>
+    <span class="feature-closer am-icon-chevron-down"></span>
+  </div>
+  <div id="feature">
+    <img src="{{ site.baseurl }}/assets/images/{{ page.image.feature }}" title="封面图片" style="display: none;">
+    {% if page.image.credit %}
+      <span class="am-text-sm">
+        {% if page.image.creditlink %}
+          <a href="{{ page.image.creditlink }}" target="_blank">{{ page.image.credit }}</a>
+        {% else %}
+          {{ page.image.credit }}
+        {% endif %}
+      </span>
+    {% endif %}
+  </div>
+  <div class="feature-trigger am-text-center">
+    <span class="feature-opener am-icon-chevron-down"></span>
+    <span class="feature-closer am-icon-chevron-up"></span>
+  </div>
 {% endif %}
 
 <div id="gotop-fixer">
