--- a/_includes/_footer.html
+++ b/_includes/_footer.html
@@ -10,12 +10,7 @@
 {% include _outdated_browser.html %}
 
 <!-- jQuery -->
-<!--[if (gte IE 9)|!(IE)]><!-->
 <script src="http://libs.useso.com/js/jquery/2.1.1/jquery.min.js"></script>
-<!--<![endif]-->
-<!--[if lte IE 8 ]>
-<script src="http://libs.useso.com/js/jquery/1.11.3/jquery.min.js"></script>
-<![endif]-->
 
 <!-- Amaze UI -->
 <script src="http://cdn.amazeui.org/amazeui/2.7.0/js/amazeui.min.js"></script>
@@ -27,9 +22,9 @@
 <script src="{{ site.baseurl }}/assets/javascripts/main.js"></script>
 
 <!-- 多说公共JS代码 -->
-{% if site.duoshuo %}
+{% if site.service.duoshuo and page.comments %}
 <script type="text/javascript">
-  var duoshuoQuery = {short_name:"{{ site.duoshuo }}"};
+  var duoshuoQuery = {short_name:"{{ site.service.duoshuo }}"};
   (function() {
       var ds = document.createElement('script');
       ds.type = 'text/javascript';ds.async = true;
