--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -7,7 +7,7 @@ layout: default
   {{ content }}
 
   <!-- 多说评论框 -->
-  {% if site.duoshuo and page.comments %}
-  <div class="ds-thread" data-thread-key="{{ page.comments }} " data-title="{{ page.title }}" data-url="{{ site.duoshuo_url }}{{ page.url }}"></div>
+  {% if site.service.duoshuo and page.comments %}
+  <div class="ds-thread" data-thread-key="{{ page.comments }} " data-title="{{ page.title }}" data-url="{{ site.url }}{{ page.url }}"></div>
   {% endif %}
 </div>
