--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,28 +5,35 @@ layout: default
 <div id="content" class="post am-container" role="main">
   <article class="am-article">
     <div class="am-article-hd" style="display: none;">
-      <h1 class="am-article-title" style="display: none;">{{ page.title }}</h1>
+      <h1 class="am-article-title">{{ page.title }}</h1>
+      <p class="am-article-lead">{{ page.description }}</p>
     </div>
 
     <div class="am-article-bd">
-      <p class="am-article-lead" style="display: none;">{{ page.description }}</p>
       {{ content }}
     </div>
 
     <div class="am-article-meta">
       <span>
         发表日期:
-        <time datetime="{{ page.date | date_to_xmlschema }}">{{ page.date | date: "%Y年%m月%d日" }}</time>
+        <time datetime="{{ page.date | date_to_xmlschema }}">
+          {{ page.date | date: "%Y年%m月%d日" }}
+        </time>
         | 最新修订:
-        <time datetime="{{ page.modified | date_to_xmlschema  }}">{{ page.modified | date: "%Y年%m月%d日" }}</time>
+        <time datetime="{{ page.modified | date_to_xmlschema  }}">
+          {{ page.modified | date: "%Y年%m月%d日" }}
+        </time>
       </span>
-      <span class="am-fr">{% for tag in page.tags %}<a href="{{ site.baseurl }}/tags/#{{ tag }}" title="Pages tagged {{ tag }}" class="am-badge am-round">{{ tag }}</a> {% endfor %}</span>
+      <span class="am-fr">
+        {% for tag in page.tags %}
+          <a href="{{ site.baseurl }}/tags/#{{ tag }}" title="Pages tagged {{ tag }}" class="am-badge am-round">{{ tag }}</a>
+        {% endfor %}
+      </span>
     </div>
 
     <!-- 多说分享与评论 -->
-    {% if site.duoshuo and page.comments %}
-
-    <div class="ds-share flat" data-thread-key="{{ page.comments }}" data-title="{{ page.title }}" data-images="{{ site.baseurl }}/assets/images/{{ page.image.feature }}" data-content="{{ page.description }}" data-url="{{ site.duoshuo_url }}{{ page.url }}">
+    {% if site.service.duoshuo and page.comments %}
+    <div class="ds-share flat" data-thread-key="{{ page.comments }}" data-title="{{ page.title }}" data-images="{{ site.baseurl }}/assets/images/{{ page.image.feature }}" data-content="{{ page.description }}" data-url="{{ site.url }}{{ page.url }}">
       <div class="ds-share-inline">
         <div class="ds-share-icons am-link-muted">
           <a class="ds-wechat am-icon-wechat am-icon-md" href="javascript:void(0);" data-service="wechat"></a>
@@ -36,7 +43,8 @@ layout: default
       </div>
     </div>
 
-    <div class="ds-thread" data-thread-key="{{ page.comments }}" data-title="{{ page.title }}" data-url="{{ site.duoshuo_url }}{{ page.url }}"></div>
+    <div class="ds-thread" data-thread-key="{{ page.comments }}" data-title="{{ page.title }}" data-url="{{ site.url }}{{ page.url }}"></div>
     {% endif %}
+
   </article>
 </div>
