Import Outdated Browser v1.1.2

--- a/_includes/_footer.html
+++ b/_includes/_footer.html
@@ -5,6 +5,10 @@
   </div>
 </footer>
 
+<!-- Outdated Browser -->
+<script src="{{ site.baseurl }}/assets/vendor/outdatedbrowser.min.js"></script>
+{% include _outdated_browser.html %}
+
 <!-- jQuery -->
 <!--[if (gte IE 9)|!(IE)]><!-->
 <script src="http://libs.useso.com/js/jquery/2.1.1/jquery.min.js"></script>
@@ -17,7 +21,7 @@
 <script src="http://cdn.amazeui.org/amazeui/2.7.0/js/amazeui.min.js"></script>
 
 <!-- Waypoints -->
-<script src="{{ site.baseurl }}/assets/javascripts/vendor/jquery.waypoints.min.js"></script>
+<script src="{{ site.baseurl }}/assets/vendor/jquery.waypoints.min.js"></script>
 
 <!-- Main JS -->
 <script src="{{ site.baseurl }}/assets/javascripts/main.js"></script>
