--- a/_includes/_header.html
+++ b/_includes/_header.html
@@ -45,6 +45,9 @@
 <meta name="msapplication-TileImage" content="{{ site.baseurl }}/assets/images/apple-touch-icon-72x72-precomposed.png">
 <meta name="msapplication-TileColor" content="#000000">
 
+<!-- Outdated Browser -->
+<link rel="stylesheet" href="{{ site.baseurl }}/assets/vendor/outdatedbrowser.min.css">
+
 <!-- Amasze UI -->
 <link rel="stylesheet" href="http://cdn.amazeui.org/amazeui/2.7.0/css/amazeui.min.css">
 
