--- a/_includes/_banner.html
+++ b/_includes/_banner.html
@@ -21,13 +21,13 @@
   </nav>
 </div>
 
-{% if page.image.feature %}
+{% if page.feature.image %}
   <div class="feature-trigger am-text-center">
     <span class="feature-opener am-icon-chevron-up"></span>
     <span class="feature-closer am-icon-chevron-down"></span>
   </div>
   <div id="feature">
-    <img src="{{ site.baseurl }}/assets/images/{{ page.image.feature }}" title="封面图片" style="display: none;">
+    <img src="{{ site.baseurl }}/assets/images/{{ page.feature.image }}" title="封面图片" style="display: none;">
     {% if page.image.credit %}
       <span class="am-text-sm">
         {% if page.image.creditlink %}
