--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -33,7 +33,7 @@ layout: default
 
     <!-- 多说分享与评论 -->
     {% if site.service.duoshuo and page.comments %}
-    <div class="ds-share flat" data-thread-key="{{ page.comments }}" data-title="{{ page.title }}" data-images="{{ site.baseurl }}/assets/images/{{ page.image.feature }}" data-content="{{ page.description }}" data-url="{{ site.url }}{{ page.url }}">
+    <div class="ds-share flat" data-thread-key="{{ page.comments }}" data-title="{{ page.title }}" data-images="{{ site.baseurl }}/assets/images/{{ page.feature.image }}" data-content="{{ page.description }}" data-url="{{ site.url }}{{ page.url }}">
       <div class="ds-share-inline">
         <div class="ds-share-icons am-link-muted">
           <a class="ds-wechat am-icon-wechat am-icon-md" href="javascript:void(0);" data-service="wechat"></a>
