Add JiaThis for sharing posts

--- a/_includes/_footer.html
+++ b/_includes/_footer.html
@@ -21,7 +21,11 @@
 <!-- Main JS -->
 <script src="{{ site.baseurl }}/assets/javascripts/main.js"></script>
 
-<!-- 友言 -->
+<!-- JiaThis -->
+<script type="text/javascript">var jiathis_config = {data_track_clickback:'true'};</script>
+<script type="text/javascript" src="http://v3.jiathis.com/code/jia.js?uid=1820817" charset="utf-8"></script>
+
+<!-- UYan -->
 {% if site.service.uyan_uid and page.comments %}
 <script type="text/javascript">
 var uyan_config = {
