--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -32,7 +32,12 @@ layout: default
     </div>
 
     {% if site.service.uyan_uid and page.comments %}
-    <hr>
+    <div class="jiathis_style_32x32 am-link-muted">
+      <a class="jiathis_button_weixin am-icon-wechat am-icon-md"></a>
+      <a class="jiathis_button_tqq am-icon-qq am-icon-md"></a>
+      <a class="jiathis_button_tsina am-icon-weibo am-icon-md"></a>
+    </div>
+
     <div id="uyan_frame"></div>
     {% endif %}
 
