Change jQuery CDN from 360's to Baidu's

--- a/_includes/_footer.html
+++ b/_includes/_footer.html
@@ -10,7 +10,7 @@
 {% include _outdated_browser.html %}
 
 <!-- jQuery -->
-<script src="http://libs.useso.com/js/jquery/2.1.1/jquery.min.js"></script>
+<script src="http://libs.baidu.com/jquery/2.1.1/jquery.min.js"></script>
 
 <!-- Amaze UI -->
 <script src="http://cdn.amazeui.org/amazeui/2.7.0/js/amazeui.min.js"></script>
